--- a/theme.css
+++ b/theme.css
@@ -64,6 +64,7 @@ Author URL: https://femar.co.ke
   --dot-background: #6b7280c9;
   --hover-background: #f7f7f7;
   --que-background: #e7e7e76c;
+  --poll-background: #e7e7e7d7;
 
   --accent-color: #08b86f;
   --accent-alt: #21D029;
@@ -89,6 +90,7 @@ Author URL: https://femar.co.ke
   --action-linear: linear-gradient(#53595f, #627ea0);
   --error-linear: linear-gradient(103.53deg, #fa6436 -6.72%, #ec4b19 109.77%);
   --second-linear: linear-gradient(0deg,#df791a 0%, #f09c4e 100%);
+  --poll-linear: linear-gradient(0deg, #df791ace 0%, #f09c4ecc 100%);
   --accent-linear: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
   --alt-linear: linear-gradient(78deg, rgb(31, 6, 71) -50%, rgb(48, 0, 130) 28.67%, rgb(143, 0, 153) 57.79%, rgba(238, 0, 176, 0.85) 76.05%, rgb(247, 95, 98) 88.54%, rgb(255, 190, 20));
   --loader-gradient: linear-gradient(-45deg, #ececec, #f8f8f8, #DDDDDD, #f8f8f8, #ececec);
