--- a/theme.css
+++ b/theme.css
@@ -74,7 +74,7 @@ Author URL: https://femar.co.ke
   --text-color: #53595f;
   --read-color: #333333;
   --title-color: #1f2937;
-  --color-alt: #ff932f;
+  --alt-color: #ff932f;
   --error-color: #ec4b19;
   --anchor: #4b556321;
   --anchor-active: #21D029;
