--- a/theme.css
+++ b/theme.css
@@ -51,7 +51,9 @@ Author URL: https://femar.co.ke
 
   --label-focus-background: #eaf3ff;
 
-  --story-border-mobile: thin solid #6b728025;
+  --poll-border: thin solid #6b728025;
+
+  --story-border-mobile: thin solid #6b72801a;
   --border-mobile: thin solid #6b728088;
   --border-header: 0.002rem solid #6b72809a;
 
