--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ main.test {
 }
 
 section.side {
-  border: 1px solid #53595f;
+  /* border: 1px solid #53595f; */
   padding: 0;
   width: 35%;
   display: flex;
@@ -140,145 +140,175 @@ section.content {
   width: 63%;
 }
 
-.post {
-  /* border: 1px solid #6b7280; */
+.author {
+  /* border: 1px solid #53595f; */
+  padding: 0;
+  width: 100%;
   display: flex;
   flex-flow: column;
-  gap: 12px;
-  padding: 0;
-}
-
-.post > .content {
-  padding: 0;
-  display: flex;
-  flex-flow: column;
-  gap: 0;
-  font-family: var(--font-text), sans-serif;
-}
-
-.post > .content p {
-  padding: 0;
-  margin: 0;
-  color: var(--text-color);
-}
-
-.post > .poll {
-  padding: 0;
-  display: flex;
-  flex-flow: column;
-  gap: 15px;
-}
-
-.post > .poll > .poll-options {
-  padding: 0;
-  display: flex;
-  flex-flow: column;
+  align-items: start;
   gap: 8px;
 }
 
-.post > .poll > .poll-options > .poll-option {
-  padding: 0;
+.author > .top {
+  /* border: 1px solid #53595f; */
   display: flex;
+  width: 100%;
   flex-flow: row;
+  align-items: center;
+  gap: 5px;
+}
+
+.author > .top > .avatar {
+  /* border: 1px solid #53595f; */
+  width: 45px;
+  height: 45px;
+  overflow: hidden;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+}
+
+.author > .top > .avatar > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.author > .top > .name {
+  /* border: thin solid #53595f; */
+  display: flex;
+  justify-content: center;
+  flex-flow: column;
   gap: 0;
 }
 
-.post > .poll > .poll-options > .poll-option label {
-  display: inline-block;
-  position: relative;
-  height: 30px;
-  width: 100%;
-  cursor: pointer;
-  line-height: 1.5;
-  border: var(--story-border);
-  padding: 0;
+.author > .top > .name > h4.name {
+  /* border: thin solid #53595f; */
+  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  color: var(--text-color);
   font-family: var(--font-text), sans-serif;
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.author > .top > .name > h4.name svg {
+  color: var(--alt-color);
+  margin: 5px 0 0 0;
+}
+
+.author > .top > .name > a.username {
   color: var(--gray-color);
+  font-family: var(--font-mono), monospace;
+  font-size: 0.9rem;
+  font-weight: 500;
+  text-decoration: none;
+  display: flex;
+  gap: 2px;
+  align-items: center;
+}
+
+.author > .top > .name > a.username svg {
+  color: var(--gray-color);
+  width: 15px;
+  height: 15px;
+  margin: 3px 0 0 0;
+}
+
+.author > .top > .name > a.username:hover {
+  color: transparent;
+  background: var(--accent-linear);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+.author > .top > .name > a.username:hover svg {
+  color: var(--accent-color);
+}
+
+.author > .stats {
+  /* border: 1px solid #53595f; */
+  color: var(--gray-color);
+  display: flex;
+  width: 100%;
+  flex-flow: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.author > .stats > .stat {
+  /* border: 1px solid #53595f; */
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  gap: 5px;
+}
+
+.author > .stats > .stat > .label {
+  color: var(--gray-color);
+  font-family: var(--font-main), sans-serif;
+  text-transform: lowercase;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.author > .stats > .stat > .number {
+  color: var(--text-color);
+  font-family: var(--font-main), sans-serif;
+  font-size: 0.84rem;
+  font-weight: 500;
+}
+
+.author > .bio {
+  /* border: 1px solid #53595f; */
+  display: flex;
+  flex-flow: column;
+  gap: 5px;
+  color: var(--text-color);
+  font-family: var(--font-text), sans-serif;
+  font-size: 1rem;
+  line-height: 1.4;
+  font-weight: 400;
+}
+
+.author > .bio > p {
+  all: inherit;
+}
+
+.author > .actions {
+  /* border: 1px solid #53595f; */
+  display: flex;
+  width: 100%;
+  flex-flow: row;
+  align-items: center;
+  gap: 10px;
+  margin: 10px 0;
+}
+
+.author > .actions > a.action {
+  border: var(--action-border);
+  text-decoration: none;
+  display: flex;
+  width: 100%;
+  flex-flow: row;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 20px;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
+  color: var(--text-color);
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
 
-
-.post > .poll > .poll-options > .poll-option label span.text {
-  /* border: var(--story-border-mobile); */
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  display: inline-block;
-  z-index: 1;
-  width: 100%;
-  height: max-content;
-  padding: 2px 8px;
-}
-
-.post > .poll > .poll-options > .poll-option label svg {
-  position: absolute;
-  display: none;
-  right: 8px;
-  top: 50%;
-  z-index: 3;
-  transform: translateY(-50%);
-  color: var(--gray-color);
-}
-
-.post > .poll > .poll-options > .poll-option label span.fill {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  display: inline-block;
-  z-index: 0;
-  height: 100%;
-  background: var(--poll-background);
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  transition: width 0.3s ease-in-out;
-  -webkit-transition: width 0.3s ease-in-out;
-  -moz-transition: width 0.3s ease-in-out;
-  -ms-transition: width 0.3s ease-in-out;
-  -o-transition: width 0.3s ease-in-out;
-}
-
-.post > .poll > .poll-options > .poll-option input[type="radio"] {
-  display: none;
-}
-
-.post > .poll > .poll-options > .poll-option.high label span.fill {
-  background: var(--poll-linear);
-}
-
-.post > .poll > .poll-options > .poll-option.high label span.text {
-  font-weight: 500;
-  color: var(--title-color);
-}
-
-.post > .poll > .poll-options > .poll-option input[type="radio"]:checked + label svg {
-  display: inline-block;
-}
-
-.post > .poll > .poll-options > .poll-option.high input[type="radio"]:checked + label svg {
-  display: inline-block;
-  color: var(--accent-color);
-}
-
-.post > .poll > .info {
-  padding: 0;
-  display: flex;
-  flex-flow: row;
-  color: var(--gray-color);
-  gap: 5px;
-  font-size: 0.95rem;
-}
-
-.post > .poll > .info .count,
-.post > .poll > .info .count {
-  font-family: var(--font-mono), monospace;
-  font-size: 0.9rem;
+.author > .actions > a.action.follow {
+  border: none;
+  background: var(--accent-linear);
+  color: var(--white-color);
 }
 
 /* at media query 660px */
