--- a/style.css
+++ b/style.css
@@ -39,31 +39,26 @@ html {
   padding: 0;
   font-size: 16px;
   width: 100%;
+  height: 100%;
   display: flex;
   flex-flow: column;
   align-items: center;
   justify-content: center;
-  background-position: 100%;
-  background-size: 1rem 1rem;
-  background-color: var(--background);
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: transparent;
 }
 
 body {
   /* border: 1px solid blue; */
-  padding: 0 0 30px 0;
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
   font-size: 16px;
   margin: 0;
-  /* width: 85%; */
+  height: 100vh;
   width: 1100px;
   max-width: 1100px;
   min-height: var(--vh-height, 100vh);
   font-family: var(--font-main), sans-serif;
 
-  padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
-    env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
+  /* padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
+    env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px); */
 }
 
 body.stop-scrolling {
