--- a/theme.css
+++ b/theme.css
@@ -78,8 +78,7 @@ Author URL: https://femar.co.ke
   --title-color: #1f2937;
   --alt-color: #ff932f;
   --error-color: #ec4b19;
-  --anchor: #4b556321;
-  --anchor-active: #21D029;
+  --anchor-color: #0065c5;
 
   --open-line: 2px solid #08b86f93;
   --open-line-mobile: 2px solid #08b86fc5;
