--- a/style.css
+++ b/style.css
@@ -135,175 +135,63 @@ section.content {
   width: 63%;
 }
 
-.author {
+.top {
   /* border: 1px solid #53595f; */
   padding: 0;
   width: 100%;
   display: flex;
-  flex-flow: column;
-  align-items: start;
+  align-items: center;
+  justify-content: center;
+  width: max-content;
   gap: 8px;
 }
 
-.author > .top {
-  /* border: 1px solid #53595f; */
-  display: flex;
-  width: 100%;
-  flex-flow: row;
-  align-items: center;
-  gap: 5px;
-}
-
-.author > .top > .avatar {
-  /* border: 1px solid #53595f; */
-  width: 45px;
-  height: 45px;
-  overflow: hidden;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-}
-
-.author > .top > .avatar > img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.author > .top > .name {
-  /* border: thin solid #53595f; */
-  display: flex;
-  justify-content: center;
-  flex-flow: column;
-  gap: 0;
-}
-
-.author > .top > .name > h4.name {
-  /* border: thin solid #53595f; */
-  margin: 0;
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  color: var(--text-color);
-  font-family: var(--font-text), sans-serif;
-  font-size: 1.1rem;
-  font-weight: 600;
-}
-
-.author > .top > .name > h4.name svg {
-  color: var(--alt-color);
-  margin: 5px 0 0 0;
-}
-
-.author > .top > .name > a.username {
-  color: var(--gray-color);
-  font-family: var(--font-mono), monospace;
-  font-size: 0.9rem;
-  font-weight: 500;
+.top > a.link {
   text-decoration: none;
-  display: flex;
-  gap: 2px;
-  align-items: center;
-}
-
-.author > .top > .name > a.username svg {
   color: var(--gray-color);
-  width: 15px;
-  height: 15px;
-  margin: 3px 0 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.author > .top > .name > a.username:hover {
-  color: transparent;
-  background: var(--accent-linear);
-  background-clip: text;
-  -webkit-background-clip: text;
-}
-
-.author > .top > .name > a.username:hover svg {
+.top > a.link.profile:hover,
+.top > a.link.search:hover {
+  transition: color 0.3s ease-in-out;
+    -webkit-transition: color 0.3s ease-in-out;
+    -moz-transition: color 0.3s ease-in-out;
+    -ms-transition: color 0.3s ease-in-out;
+    -o-transition: color 0.3s ease-in-out;
   color: var(--accent-color);
 }
 
-.author > .stats {
-  /* border: 1px solid #53595f; */
-  color: var(--gray-color);
-  display: flex;
-  width: 100%;
-  flex-flow: row;
-  align-items: center;
-  gap: 10px;
+.top a.link.search a svg {
+  margin: 0 0 0 0;
+  width: 22px;
+  height: 22px;
 }
 
-.author > .stats > .stat {
-  /* border: 1px solid #53595f; */
-  display: flex;
-  flex-flow: row;
-  align-items: center;
-  gap: 5px;
+.top > a.link.profile > svg {
+  width: 23px;
+  height: 23px;
 }
 
-.author > .stats > .stat > .label {
-  color: var(--gray-color);
-  font-family: var(--font-main), sans-serif;
-  text-transform: lowercase;
-  font-size: 1rem;
-  font-weight: 400;
-}
-
-.author > .stats > .stat > .number {
-  color: var(--text-color);
-  font-family: var(--font-main), sans-serif;
-  font-size: 0.84rem;
+.top > a.link.signin {
+  border: var(--story-border-mobile);
   font-weight: 500;
-}
-
-.author > .bio {
-  /* border: 1px solid #53595f; */
-  display: flex;
-  flex-flow: column;
-  gap: 5px;
-  color: var(--text-color);
-  font-family: var(--font-text), sans-serif;
-  font-size: 1rem;
-  line-height: 1.4;
-  font-weight: 400;
-}
-
-.author > .bio > p {
-  all: inherit;
-}
-
-.author > .actions {
-  /* border: 1px solid #53595f; */
-  display: flex;
-  width: 100%;
-  flex-flow: row;
-  align-items: center;
-  gap: 10px;
-  margin: 10px 0;
-}
-
-.author > .actions > a.action {
-  border: var(--action-border);
-  text-decoration: none;
-  display: flex;
-  width: 100%;
-  flex-flow: row;
-  align-items: center;
-  justify-content: center;
-  padding: 5px 20px;
+  padding: 4px 15px;
+  font-family: var(--font-read);
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
-  color: var(--text-color);
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
 
-.author > .actions > a.action.follow {
-  border: none;
+.top > a.link.signin:hover {
+  color: transparent;
   background: var(--accent-linear);
-  color: var(--white-color);
+  background-clip: text;
+  -webkit-background-clip: text;
 }
 
 
