--- a/theme.css
+++ b/theme.css
@@ -48,6 +48,8 @@ Author URL: https://femar.co.ke
   --action-border: 1px solid #6b72803f;
   --story-border: thin solid #6b72801a;
   --action-border: thin solid #627ea073;
+  --topic-border: thin solid #6b728046;
+  --topic-border-active: thin solid #21d02a7a;
 
   --label-focus-background: #eaf3ff;
 
