--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ section.content {
 }
 
 .top > a.link.signin {
-  border: var(--story-border-mobile);
+  border: var(--border-mobile);
   font-weight: 500;
   padding: 4px 15px;
   font-family: var(--font-read);
