--- a/style.css
+++ b/style.css
@@ -216,13 +216,13 @@ section.side > .user-info > ul.info > li.item > .icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 30px;
-  width: 30px;
-  min-height: 30px;
-  min-width: 30px;
-  max-height: 30px;
-  max-width: 30px;
-  padding: 5px;
+  height: 26px;
+  width: 26px;
+  min-height: 26px;
+  min-width: 26px;
+  max-height: 26px;
+  max-width: 26px;
+  padding: 3px;
   border-radius: 50px;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
@@ -240,10 +240,14 @@ section.side > .user-info > ul.info > li.item > .icon > svg {
 
 section.side > .user-info > ul.info > li.item > .link {
   color: var(--text-color);
-  font-family: var(--font-text), sans-serif;
+  font-family: var(--font-main), sans-serif;
   font-size: 1rem;
   font-weight: 400;
   text-decoration: none;
+}
+
+section.side > .user-info > ul.info > li.item > a.link:hover {
+  color: var(--text-color);
 }
 
 section.side > .user-info > ul.info > li.item > .link .numbers {
