--- a/style.css
+++ b/style.css
@@ -366,6 +366,139 @@ section.content {
   width: 15px;
 }
 
+/* author */
+.author {
+  /* border-top: var(--border); */
+  padding: 10px 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-flow: row;
+  gap: 10px;
+}
+
+.author > .author-info {
+  display: flex;
+  width: 100%;
+  flex-flow: row;
+  align-items: center;
+  gap: 5px;
+}
+
+.author > .author-info > .avatar {
+  position: relative;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+}
+
+.author > .author-info > .avatar > img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+}
+
+.author > .author-info > .avatar > .icon {
+  background: var(--background);
+  position: absolute;
+  bottom: 0px;
+  right: -3px;
+  width: 20px;
+  height: 20px;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+.author > .author-info > .avatar > .icon svg {
+  width: 14px;
+  height: 14px;
+  color: var(--accent-color);
+}
+
+.author > .author-info > .name {
+  display: flex;
+  justify-content: center;
+  flex-flow: column;
+  gap: 0;
+}
+
+.author > .author-info > .name > h4.name {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  color: var(--text-color);
+  font-family: var(--font-main), sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.author > .author-info > .name > a.username {
+  color: var(--gray-color);
+  font-family: var(--font-mono), monospace;
+  font-size: 0.85rem;
+  font-weight: 500;
+  text-decoration: none;
+  display: flex;
+  gap: 2px;
+  align-items: center;
+}
+
+.author > .author-info > .name > a.username svg {
+  color: var(--gray-color);
+  width: 15px;
+  height: 15px;
+  margin: 2px 0 0 0;
+}
+
+.author > .author-info > .name > a.username:hover {
+  color: transparent;
+  background: var(--accent-linear);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+.author > .author-info > .name > a.username:hover svg {
+  color: var(--accent-color);
+}
+
+.author > button.action {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 10px;
+  height: max-content;
+  width: 120px;
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  background: var(--accent-linear);
+  color: var(--white-color);
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: var(--font-main), sans-serif;
+  cursor: pointer;
+  outline: none;
+  border: none;
+}
+
+.author > button.action.following {
+  background: none;
+  color: var(--text-color);
+  border: var(--border);
+  font-weight: 500;
+  font-size: 0.9rem;
+  line-height: 1.3;
+}
 
 /* at media query 660px */
 @media screen and (max-width: 660px) {
