--- a/style.css
+++ b/style.css
@@ -368,16 +368,68 @@ section.content {
 
 /* author */
 .author {
-  /* border-top: var(--border); */
-  padding: 10px 0;
-  width: 100%;
+  /* border: var(--border); */
+  position: relative;
+  padding: 0;
+  height: 30px;
+  width: max-content;
   display: flex;
-  align-items: center;
-  flex-flow: row;
-  gap: 10px;
+  flex-flow: column;
+  gap: 0px;
 }
 
-.author > .author-info {
+a.meta.link {
+  height: max-content;
+  display: flex;
+  align-items: center;
+  font-family: var(--font-mono),monospace;
+  gap: 5px;
+  font-size: 0.9rem;
+  line-height: 1.5;
+  text-decoration: none;
+  text-decoration: none;
+  color: transparent;
+  background: var(--accent-linear);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+.content-container {
+  border: var(--border);
+  position: absolute;
+  background-color: var(--background);
+  top: 0;
+  left: 0;
+  top: calc(100% - 1px);
+  padding: 10px;
+  width: 380px;
+  display: none;
+  flex-flow: column;
+  align-items: start;
+  gap: 8px;
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+}
+
+.author:hover .content-container {
+  display: flex;
+}
+
+.content-container > span.pointer {
+  position: absolute;
+  top: -5px;
+  left: 30px;
+  rotate: 45deg;
+  width: 10px;
+  height: 10px;
+  background: var(--background);
+  /* clip-path: polygon(50% 0%, 0% 100%, 100% 100%); */
+  border-left: var(--border);
+  border-top: var(--border);
+}
+
+.top {
   display: flex;
   width: 100%;
   flex-flow: row;
@@ -385,16 +437,16 @@ section.content {
   gap: 5px;
 }
 
-.author > .author-info > .avatar {
+.top > .avatar {
   position: relative;
-  width: 42px;
-  height: 42px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
 }
 
-.author > .author-info > .avatar > img {
+.top > .avatar > img {
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -404,11 +456,11 @@ section.content {
   -moz-border-radius: 50%;
 }
 
-.author > .author-info > .avatar > .icon {
+.top > .avatar > .icon {
   background: var(--background);
   position: absolute;
-  bottom: 0px;
-  right: -3px;
+  bottom: -1px;
+  right: -2px;
   width: 20px;
   height: 20px;
   z-index: 1;
@@ -418,34 +470,39 @@ section.content {
   border-radius: 50%;
 }
 
-.author > .author-info > .avatar > .icon svg {
-  width: 14px;
-  height: 14px;
+.top > .avatar > .icon svg {
+  width: 15px;
+  height: 15px;
   color: var(--accent-color);
 }
 
-.author > .author-info > .name {
+.top > .name {
   display: flex;
   justify-content: center;
   flex-flow: column;
   gap: 0;
 }
 
-.author > .author-info > .name > h4.name {
+.top > .name > h4.name {
   margin: 0;
   display: flex;
   align-items: center;
-  gap: 3px;
+  gap: 5px;
   color: var(--text-color);
-  font-family: var(--font-main), sans-serif;
-  font-size: 1rem;
+  font-family: var(--font-text), sans-serif;
+  font-size: 1.1rem;
   font-weight: 600;
 }
 
-.author > .author-info > .name > a.username {
+.top > .name > h4.name svg {
+  color: var(--alt-color);
+  margin: 5px 0 0 0;
+}
+
+.top > .name > span.username {
   color: var(--gray-color);
   font-family: var(--font-mono), monospace;
-  font-size: 0.85rem;
+  font-size: 0.9rem;
   font-weight: 500;
   text-decoration: none;
   display: flex;
@@ -453,51 +510,118 @@ section.content {
   align-items: center;
 }
 
-.author > .author-info > .name > a.username svg {
+.top > .name > span.username svg {
   color: var(--gray-color);
   width: 15px;
   height: 15px;
-  margin: 2px 0 0 0;
+  margin: 3px 0 0 0;
 }
 
-.author > .author-info > .name > a.username:hover {
+.top > .name > span.username:hover {
   color: transparent;
   background: var(--accent-linear);
   background-clip: text;
   -webkit-background-clip: text;
 }
 
-.author > .author-info > .name > a.username:hover svg {
+.top > .name > span.username:hover svg {
   color: var(--accent-color);
 }
 
-.author > button.action {
+.stats {
+  color: var(--gray-color);
   display: flex;
+  width: 100%;
+  flex-flow: row;
   align-items: center;
-  justify-content: center;
-  padding: 5px 10px;
-  height: max-content;
-  width: 120px;
-  border-radius: 12px;
-  -webkit-border-radius: 12px;
-  -moz-border-radius: 12px;
-  background: var(--accent-linear);
-  color: var(--white-color);
-  font-size: 1rem;
-  font-weight: 500;
-  font-family: var(--font-main), sans-serif;
-  cursor: pointer;
-  outline: none;
-  border: none;
+  gap: 10px;
 }
 
-.author > button.action.following {
-  background: none;
+.stats > .stat {
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  gap: 5px;
+}
+
+.stats > .stat > .label {
+  color: var(--gray-color);
+  font-family: var(--font-main), sans-serif;
+  text-transform: lowercase;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.stats > .stat > .number {
   color: var(--text-color);
-  border: var(--border);
+  font-family: var(--font-main), sans-serif;
+  font-size: 0.84rem;
   font-weight: 500;
-  font-size: 0.9rem;
-  line-height: 1.3;
+}
+
+.bio {
+  display: flex;
+  flex-flow: column;
+  gap: 5px;
+  color: var(--text-color);
+  font-family: var(--font-text), sans-serif;
+}
+
+.bio > p {
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
+.actions {
+  display: flex;
+  width: 100%;
+  flex-flow: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  margin: 5px 0 3px;
+}
+
+.actions > span.action {
+  border: var(--action-border);
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  width: 100px;
+  flex-flow: row;
+  align-items: center;
+  justify-content: center;
+  padding: 4px 20px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  color: var(--text-color);
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.actions > .action.follow {
+  border: none;
+  background: var(--accent-linear);
+  color: var(--white-color);
+   border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.actions > .action.view {
+  border: none;
+  background: var(--action-linear);
+  color: var(--white-color);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
 /* at media query 660px */
