Editin the topic page

--- a/res.css
+++ b/res.css
@@ -1,21 +1,70 @@
-/* For screens over 1200 pixels */
-@media (min-width: 1200px) {
+/* For screens over 1600 pixels */
+@media (min-width: 1400px) {
   html {
-    width: 80%;
+    width: 1400px;
+    max-width: 1400px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 10%;
   }
 
   body {
-    width: 100%;
-    max-width: 100%;
-    padding: 0 20px;
+    width: 90%;
+    max-width: 90%;
+    padding: 0 5%;
   }
 }
 
-@media screen and (max-width: 1200px) {
+/* For screens upto 1400 pixels */
+@media (max-width: 1400px) {
   html {
-    width: 80%;
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  body {
+    width: 96%;
+    max-width: 96%;
+    padding: 0 2%;
+  }
+}
+
+
+/* For screens over 1300 pixels */
+@media (max-width: 1350px) {
+  html {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  body {
+    width: 96%;
+    max-width: 96%;
+    padding: 0 2%;
+  }
+}
+
+/* For screens over 1200 pixels */
+@media (max-width: 1200px) {
+  html {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  body {
+    width: 94%;
+    max-width: 94%;
+    padding: 0 3%;
+  }
+}
+
+/* For up to 1000 pixels */
+@media screen and (max-width: 1000px) {
+  html {
+    width: 100%;
     margin: 0 auto;
     padding: 0 20px;
   }
@@ -26,7 +75,6 @@
     padding: 0 15px 30px 15px;
   }
 }
-
 
 @media screen and (max-width:660px) {
   html {
