--- a/style.css
+++ b/style.css
@@ -52,8 +52,7 @@ body {
   font-size: 16px;
   margin: 0;
   height: 100vh;
-  width: 1100px;
-  max-width: 1100px;
+  width: 100%;
   min-height: var(--vh-height, 100vh);
   font-family: var(--font-main), sans-serif;
 
