Editin the topic page

--- a/res.css
+++ b/res.css
@@ -65,8 +65,8 @@
 @media screen and (max-width: 1000px) {
   html {
     width: 100%;
-    margin: 0 auto;
-    padding: 0 20px;
+    margin: 0;
+    padding: 0;
   }
 
   body {
