--- a/theme.css
+++ b/theme.css
@@ -107,9 +107,30 @@ Author URL: https://femar.co.ke
     #fffffff6,
     #ffffff
   );
-  --fade-picture-gradient: linear-gradient(180deg,
-  rgba(0, 0, 0, 0),
-  rgba(0, 0, 0, 0.8)
+  --controls-gradient-left: linear-gradient(
+    -90deg, #ffffff02,
+    #ffffff2a,
+    #ffffff4d,
+    #ffffff69,
+    #ffffff83,
+    #ffffffc7,
+    #ffffffd5,
+    #ffffffea,
+    #fffffff6,
+    #ffffff
+  );
+
+  --controls-gradient-right: linear-gradient(
+    90deg, #ffffff02,
+    #ffffff2a,
+    #ffffff4d,
+    #ffffff69,
+    #ffffff83,
+    #ffffffc7,
+    #ffffffd5,
+    #ffffffea,
+    #fffffff6,
+    #ffffff
   );
 
 
