--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ html {
   padding: 0;
   font-size: 16px;
   width: 100%;
-  height: 100%;
+  height: max-content;
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -51,7 +51,7 @@ body {
   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
   font-size: 16px;
   margin: 0;
-  height: 100vh;
+  height: max-content;
   width: 100%;
   min-height: var(--vh-height, 100vh);
   font-family: var(--font-main), sans-serif;
