--- a/res.css
+++ b/res.css
@@ -1,20 +1,22 @@
 /* For screens over 1600 pixels */
 @media (min-width: 1400px) {
   html {
-    width: 1400px;
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 10%;
+    /* border: 10px solid red; */
+    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
+    margin: 0;
+    padding:0 10%;
   }
 
   body {
-    width: 90%;
-    max-width: 90%;
-    padding: 0 5%;
+    /* border: 1px solid blue; */
+    min-height: 100vh;
+    padding: 0;
   }
 }
 
-/* For screens upto 1400 pixels */
+/* For screens up to 1400 pixels */
 @media (max-width: 1400px) {
   html {
     width: 100%;
