--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@ html {
 }
 
 body {
-  /* border: 1px solid blue; */
   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
   font-size: 16px;
   margin: 0;
@@ -55,9 +54,7 @@ body {
   width: 100%;
   min-height: var(--vh-height, 100vh);
   font-family: var(--font-main), sans-serif;
-
-  /* padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
-    env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px); */
+  background-color: var(--background);
 }
 
 body.stop-scrolling {
@@ -89,11 +86,6 @@ ol {
   margin: 0;
 }
 
-/* ul li,
-ol li {
-  list-style-type: none;
-} */
-
 a {
   text-decoration: none;
 }
@@ -114,7 +106,7 @@ body > .toast {
   transform: translateX(50%);
   background: var(--accent-linear);
   color: var(--white-color);
-  padding: 8px 15px;
+  padding: 8px 15px 8px 10px;
   width: max-content;
   max-width: 95%;
   border-radius: 10px;
@@ -145,559 +137,129 @@ body > .toast > svg {
 
 /* End Toast Message */
 
-
-main.test {
-  /* border: 1px solid #53595f; */
-  padding: 15px 0;
-  margin: 0;
-  display: flex;
-  justify-content: space-between;
-  gap: 0px;
-  min-height: 60vh;
-}
-
-section.side {
-  /* border: 1px solid #53595f; */
-  padding: 0;
-  width: 35%;
-  display: flex;
-  flex-flow: column;
-  gap: 10px;
-}
-
-section.side > .user-info {
-  /* border: 1px solid #6b7280; */
-  padding: 10px 0;
-  display: flex;
-  flex-flow: column;
-  align-items: start;
-  justify-content: center;
-  gap: 10px;
-  width: 100%;
-}
-
-section.side > .user-info > p.title {
-  width: 100%;
-  border-bottom: var(--border);
-  color: var(--text-color);
-  font-family: var(--font-text), sans-serif;
-  font-size: 1.2rem;
-  line-height: 1.5;
-  font-weight: 600;
-  margin: 0;
-  padding: 0 0 8px;
-}
-
-section.side > .user-info > ul.info {
-  /* border: 1px solid #6b7280; */
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-  display: flex;
-  flex-flow: column;
-  gap: 10px;
-}
-
-section.side > .user-info > ul.info > li.item {
-  /* border: 1px solid #6b7280; */
-  padding: 0;
-  margin: 0;
+body > main.main {
+  /* border: 1px solid #404040; */
   width: 100%;
   display: flex;
-  flex-flow: row;
-  align-items: center;
-  flex-wrap: nowrap;
-  gap: 10px;
-}
-
-section.side > .user-info > ul.info > li.item > .icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 26px;
-  width: 26px;
-  min-height: 26px;
-  min-width: 26px;
-  max-height: 26px;
-  max-width: 26px;
-  padding: 3px;
-  border-radius: 50px;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-  background-color: var(--poll-background);
-  color: var(--gray-color);
-  font-size: 0.9rem;
-  font-weight: 500;
-  text-transform: capitalize;
-}
-
-section.side > .user-info > ul.info > li.item > .icon > svg {
-  height: 15px;
-  width: 15px;
-}
-
-section.side > .user-info > ul.info > li.item > .link {
-  color: var(--text-color);
-  font-family: var(--font-main), sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  text-decoration: none;
-}
-
-section.side > .user-info > ul.info > li.item > a.link:hover {
-  color: var(--text-color);
-}
-
-section.side > .user-info > ul.info > li.item > .link .numbers {
-  color: var(--text-color);
-  font-weight: 500;
-  font-family: var(--font-main), sans-serif;
-  font-size: 0.9rem;
-}
-
-section.content {
-  /* border: 1px solid #6b7280; */
-  display: flex;
-  position: relative;
   flex-flow: column;
-  align-items: start;
-  padding: 0;
   gap: 0;
-  width: 63%;
+  z-index: 3;
 }
 
-.share {
-  border-top: var(--border);
-  border-bottom: var(--border);
-  padding: 10px 0;
-  width: 100%;
-  display: flex;
-  flex-flow: column;
-  gap: 10px;
-}
 
-.share > .title {
-  color: var(--text-color);
-  font-family: var(--font-text), sans-serif;
-  font-size: 1.2rem;
-  font-weight: 600;
-  margin: 0;
-  padding: 0;
-}
-
-.share-buttons {
-  /* border-right: var(--border-mobile); */
-  border-width: 2px;
-  padding: 0 0 5px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: max-content;
-  gap: 8px;
-}
-
-.share-buttons > .link {
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0;
-  margin: 0;
-  gap: 0;
-}
-
-.share-buttons > .link > .text {
-  display: none;
-}
-
-.share-buttons > .link > .icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 30px;
-  width: 30px;
-  min-height: 30px;
-  min-width: 30px;
-  max-height: 30px;
-  max-width: 30px;
-  padding: 5px;
-  border-radius: 50px;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-  background: var(--accent-linear);
-  color: var(--white-color);
-  font-size: 0.9rem;
-  font-weight: 500;
-}
-
-.share-buttons > a.x > .icon {
-  background: linear-gradient(103.53deg, #1DA1F2 -6.72%, #0A95D7 109.77%);
-}
-
-.share-buttons > a.facebook > .icon {
-  background: linear-gradient(103.53deg, #1877F2 -6.72%, #0A5A9C 109.77%);
-}
-
-.share-buttons > a.linkedin > .icon {
-  background: linear-gradient(103.53deg, #0077B5 -6.72%, #005684 109.77%);;
-}
-
-.share-buttons > a.link.mail > .icon {
-  background: linear-gradient(103.53deg, #D44638 -6.72%, #D44638 109.77%);
-}
-
-.share-buttons > a.reddit > .icon {
-  background: linear-gradient(103.53deg, #FF4500 -6.72%, #FF4500 109.77%);
-}
-
-.share-buttons > a.telegram > .icon {
-  background: linear-gradient(103.53deg, #0088CC -6.72%, #0088CC 109.77%);
-}
-
-.share-buttons > a.whatsapp > .icon {
-  background: linear-gradient(103.53deg, #25D366 -6.72%, #25D366 109.77%);
-}
-
-.share-buttons > .link > svg {
-  height: 15px;
-  width: 15px;
-}
-
-/* author */
-.author {
+/* HOME */
+body > main.main > section.landing {
+  /* border: 1px solid #c715c7; */
   position: relative;
-  padding: 0;
-  height: 30px;
-  width: max-content;
-  display: flex;
-  flex-flow: column;
-  gap: 0px;
-}
-
-a.meta.link {
   height: max-content;
-  display: flex;
-  align-items: center;
-  font-family: var(--font-mono),monospace;
-  gap: 5px;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  text-decoration: none;
-  text-decoration: none;
-  color: transparent;
-  background: var(--accent-linear);
-  background-clip: text;
-  -webkit-background-clip: text;
-}
-
-.content-container {
-  border: var(--border);
-  position: absolute;
-  background-color: var(--background);
-  top: 0;
-  left: 0;
-  top: calc(100% - 1px);
-  padding: 10px;
-  width: 380px;
-  display: flex;
-  flex-flow: column;
-  align-items: start;
-  gap: 0;
-  border-radius: 12px;
-  -webkit-border-radius: 12px;
-  -moz-border-radius: 12px;
-}
-
-.author:hover .content-container {
-  display: flex;
-}
-
-.content-container > span.pointer {
-  position: absolute;
-  top: -5px;
-  left: 30px;
-  rotate: 45deg;
-  width: 10px;
-  height: 10px;
-  background: var(--background);
-  border-left: var(--border);
-  border-top: var(--border);
-}
-
-.content-container > .overlay {
-  display: flex;
-  flex-flow: column;
-  align-items: start;
-  gap: 8px;
-}
-
-
-.top {
-  display: flex;
   width: 100%;
+  min-width: 100%;
+  margin: 0;
+  display: flex;
   flex-flow: row;
-  align-items: center;
-  gap: 5px;
-}
-
-.top > .avatar {
-  position: relative;
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-}
-
-.top > .avatar > img {
-  width: 100%;
-  height: 100%;
+  justify-content: space-between;
+  gap: 0;
   overflow: hidden;
-  object-fit: cover;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
 }
 
-.top > .avatar > .icon {
-  background: var(--background);
-  position: absolute;
-  bottom: -1px;
-  right: -2px;
-  width: 20px;
-  height: 20px;
-  z-index: 1;
+body > main.main > section.landing > .content-one {
+  /* border: 2px solid #fc0000; */
+  padding: 50px 0;
+  width: 100%;
+  min-width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
+  gap: 20px;
+  flex: 0 0 100%;
+  animation: switch 10s linear infinite;
+  -webkit-animation: switch 10s linear infinite;
+  transition: transform 1s ease-in-out;
 }
 
-.top > .avatar > .icon svg {
-  width: 15px;
-  height: 15px;
-  color: var(--accent-color);
-}
 
-.top > .name {
+body > main.main > section.landing > .content-one > .text {
+  width: 80%;
   display: flex;
-  justify-content: center;
   flex-flow: column;
-  gap: 0;
+  justify-content: center;
+  align-items: center;
+  gap: 3px;
 }
 
-.top > .name > h4.name {
+body > main.main > section.landing > .content-one > .text h2.title {
+  margin: 0 0 20px;
+  font-family: var(--font-text);
+  text-align: center;
+  line-height: 1.2;
+  font-size: 2.3rem;
+  font-weight: 700;
+  color: var(--title-color);
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.137);
+}
+
+body > main.main > section.landing > .content-one > .text p {
   margin: 0;
-  display: flex;
-  align-items: center;
-  gap: 5px;
+  font-family: var(--font-main);
+  font-size: 1.25rem;
+  text-align: center;
+  font-weight: 400;
+  line-height: 1.2;
   color: var(--text-color);
-  font-family: var(--font-text), sans-serif;
+}
+
+body > main.main > section.landing > .content-one > .text p.short {
+  margin: 10px 0;
   font-size: 1.1rem;
-  font-weight: 600;
-}
-
-.top > .name > h4.name svg {
-  color: var(--alt-color);
-  margin: 5px 0 0 0;
-}
-
-.top > .name > span.username {
+  font-family: var(--font-read);
   color: var(--gray-color);
-  font-family: var(--font-mono), monospace;
-  font-size: 0.9rem;
-  font-weight: 500;
-  text-decoration: none;
+}
+
+body > main.main > section.landing > .content-one > .text  .actions {
+  margin: 30px 0 0 0;
   display: flex;
-  gap: 2px;
-  align-items: center;
-}
-
-.top > .name > span.username svg {
-  color: var(--gray-color);
-  width: 15px;
-  height: 15px;
-  margin: 3px 0 0 0;
-}
-
-.top > .name > span.username:hover {
-  color: transparent;
-  background: var(--accent-linear);
-  background-clip: text;
-  -webkit-background-clip: text;
-}
-
-.top > .name > span.username:hover svg {
-  color: var(--accent-color);
-}
-
-.stats {
-  color: var(--gray-color);
-  display: flex;
-  width: 100%;
-  flex-flow: row;
-  align-items: center;
-  gap: 10px;
-}
-
-.stats > .stat {
-  display: flex;
-  flex-flow: row;
-  align-items: center;
-  gap: 5px;
-}
-
-.stats > .stat > .label {
-  color: var(--gray-color);
-  font-family: var(--font-main), sans-serif;
-  text-transform: lowercase;
-  font-size: 1rem;
-  font-weight: 400;
-}
-
-.stats > .stat > .number {
-  color: var(--text-color);
-  font-family: var(--font-main), sans-serif;
-  font-size: 0.84rem;
-  font-weight: 500;
-}
-
-.bio {
-  display: flex;
-  flex-flow: column;
-  gap: 5px;
-  color: var(--text-color);
-  font-family: var(--font-text), sans-serif;
-}
-
-.bio > p {
-  margin: 0;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.4;
-}
-
-.actions {
-  display: flex;
-  width: 100%;
   flex-flow: row;
   align-items: center;
   justify-content: space-between;
-  gap: 10px;
-  margin: 5px 0 3px;
+  gap: 0;
 }
 
-.actions > span.action {
-  border: var(--action-border);
+body > main.main > section.landing > .content-one > .text  .actions > .action {
+  padding: 9px 25px;
   text-decoration: none;
-  cursor: pointer;
+  font-family: var(--font-main);
+  font-size: 1.1rem;
   display: flex;
-  width: 100px;
   flex-flow: row;
+  flex-wrap: nowrap;
   align-items: center;
   justify-content: center;
-  padding: 4px 20px;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  color: var(--text-color);
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
+  gap: 10px;
+  border-radius: 17px;
+  cursor: pointer;
+  transition: all 0.3s linear;
 }
 
-.actions > .action.follow {
-  border: none;
+body > main.main > section.landing > .content-one > .text  .actions > .explore { 
   background: var(--accent-linear);
+  backdrop-filter: blur(84px);
+  -webkit-backdrop-filter: blur(84px);
+  box-shadow: 8px 8px 30px 0px rgba(42, 67, 113, 0.158);
   color: var(--white-color);
-   border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
 }
 
-.actions > .action.view {
-  border: none;
-  background: var(--action-linear);
-  color: var(--white-color);
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
+body > main.main > section.landing > .content-one > .text  .actions > .explore svg path {
+  fill: var(--white-color);
 }
 
-/* at media query 660px */
-@media screen and (max-width: 660px) {
-  main.test {
-    flex-flow: column;
-    gap: 0;
-    padding: 0;
-    margin: 0;
-  }
-
-  section.side {
-    width: 100%;
-    padding: 0;
-    margin: 0;
-  }
-
-  section.content {
-    width: 100%;
-    padding: 0;
-    margin: 0;
-  }
-
-  .content-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 100;
-    background-color: var(--modal-overlay);
-    min-width: 100dvw;
-    width: 100dvw;
-    height: 100dvh;
-    padding: 0;
-    width: max-content;
-    display: flex;
-    flex-flow: column;
-    border-radius: 0;
-  }
-
-  .content-container > .overlay {
-    position: absolute;
-    background-color: var(--background);
-    bottom: 0;
-    width: 100%;
-    gap: 10px;
-    padding: 15px 10px 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-  }
-
-  .content-container > span.pointer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100dvw;
-    height: 100dvh;
-    rotate: 0deg;
-    background-color: var(--modal-overlay);
-  }
-  
+body > main.main > section.landing > .content-one > .text  .actions > .action svg {
+  transition: all 0.3s linear;
 }
-
 
 
 /*Footer*/
 footer.footer {
-  border-top: thin solid #4b5563bd;
+  border-top: var(--border);
   padding-top: 20px;
   display: flex;
   flex-flow: column;
@@ -708,7 +270,6 @@ footer.footer {
 }
 
 footer.footer > section {
-  /* border: 1px solid #1f2937; */
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -724,11 +285,8 @@ footer.footer > section > .title {
 }
 
 footer.footer > section > ul.footer-list {
-  /* border: 1px solid #1f2937; */
-  margin: 0;
   margin: 0;
   list-style-type: none;
-  padding: 0 0 0 1px;
   padding: 0 0 0 1px;
   display: flex;
   flex-flow: row;
@@ -743,7 +301,6 @@ footer.footer > section > ul.footer-list > li.item {
   padding: 0;
   width: max-content;
   position: relative;
-  /* border: 1px solid #808080; */
 }
 
 footer.footer > section > ul.footer-list > li.item > .dot {
@@ -761,14 +318,12 @@ footer.footer > section > ul.footer-list > li.item > .dot {
 
 footer.footer > section > ul.footer-list > li.item > a.item-link {
   color: var(--gray-color);
-  /* font-size: 0.98rem; */
   text-decoration: none;
   font-weight: 400;
   font-size: 0.9rem;
 }
 
 footer.footer > section > ul.footer-list > li.item > a.item-link:hover {
-  /* color: var(--accent-color); */
   color: transparent;
   background: var(--accent-linear);
   background-clip: text;
@@ -777,7 +332,6 @@ footer.footer > section > ul.footer-list > li.item > a.item-link:hover {
 }
 
 footer.footer > section.newsletter {
-  /* border: 1px solid #1f2937; */
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -804,7 +358,6 @@ footer.footer > section.newsletter > form > input[type="email"] {
   font-family: var(--font-main);
   padding: 12px 15px;
   font-size: 1rem;
-  /* border: 2px solid #4949bc; */
   border-top-color: #21d029;
   border-top-width: 2px;
   border-right-color: #54df5b;
@@ -823,7 +376,6 @@ footer.footer > section.newsletter > form > input[type="submit"] {
   position: absolute;
   cursor: pointer;
   font-family: var(--font-main);
-  font-family: var(--font-main);
   right: 30px;
   top: 14px;
   font-size: 1rem;
@@ -837,7 +389,7 @@ footer.footer > section.newsletter > form > input[type="submit"] {
 }
 
 footer.footer > .copy {
-  border-top: 1px solid #6b728037;
+  border-top: var(--border);
   padding: 8px 10px;
   grid-column: 1/5;
   display: flex;
@@ -853,7 +405,6 @@ footer.footer > .copy > .copyright {
 footer.footer > .copy > .copyright > .company {
   display: inline-block;
   margin: -5px 10px 0 0;
-  margin: -5px 10px 0 0;
   font-size: 1.35rem;
   font-weight: bold;
   color: var(--text-color);
@@ -864,11 +415,9 @@ footer.footer > .copy > .copyright > i {
   color: var(--gray-color);
   font-style: normal;
   font-family: inherit;
-  /* font-size: 1.2rem; */
 }
 
 footer.footer > .copy > .copyright > a {
-  /* border: 1px solid #80808040; */
   color: var(--gray-color);
   text-decoration: none;
   text-align: center;
@@ -885,7 +434,6 @@ footer.footer > .copy > .copyright > a:hover {
 footer.footer > .copy > .legal {
   display: flex;
   flex-wrap: nowrap;
-  gap: 0;
   gap: 0;
 }
 
