--- a/res.css
+++ b/res.css
@@ -95,6 +95,19 @@
     padding: 0 10px;
   }
 
+  body > main.main > section.landing > .content-one {
+    padding: 25px 0;
+    width: 100%;
+    min-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    animation: switch 10s linear infinite;
+    -webkit-animation: switch 10s linear infinite;
+    transition: transform 1s ease-in-out;
+  }
+
   body > main.main > section.landing > .content-one > .text {
     width: 100%;
     display: flex;
@@ -103,6 +116,46 @@
     align-items: center;
     gap: 3px;
   }
+
+  body > main.main > section.landing > .content-one > .text h2.title {
+    margin: 0 0 10px;
+    font-family: var(--font-text);
+    text-align: center;
+    line-height: 1.2;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--title-color);
+    text-shadow: 0 0 20px rgba(0, 0, 0, 0.137);
+  }
+  
+  body > main.main > section.landing > .content-one > .text p {
+    margin: 10px 0 5px;
+    font-family: var(--font-text);
+    font-size: 1rem;
+    text-align: center;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--text-color);
+  }
+  
+  body > main.main > section.landing > .content-one > .text p.short {
+    margin: 10px 0;
+    font-size: 1rem;
+    font-style: italic;
+    font-weight: 500;
+    font-family: var(--font-read);
+    color: var(--gray-color);
+  }
+
+  body > main.main > section.landing > .content-one > .text  .actions {
+    margin: 10px 0 0 0;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
+  }
+  
 
   /* Toast Message */
   body > .toast {
