--- a/style.css
+++ b/style.css
@@ -142,6 +142,8 @@ body > main.main {
   width: 100%;
   display: flex;
   flex-flow: column;
+  justify-content: center;
+  align-items: center;
   gap: 0;
   z-index: 3;
 }
@@ -149,21 +151,20 @@ body > main.main {
 
 /* HOME */
 body > main.main > section.landing {
-  /* border: 1px solid #c715c7; */
   position: relative;
   height: max-content;
   width: 100%;
   min-width: 100%;
   margin: 0;
   display: flex;
-  flex-flow: row;
+  flex-flow: column;
   justify-content: space-between;
   gap: 0;
   overflow: hidden;
 }
 
 body > main.main > section.landing > .content-one {
-  padding: 25px 0 50px;
+  padding: 25px 0;
   width: 100%;
   min-width: 100%;
   display: flex;
@@ -187,7 +188,7 @@ body > main.main > section.landing > .content-one > .text {
 }
 
 body > main.main > section.landing > .content-one > .text h2.title {
-  margin: 0 0 20px;
+  margin: 0;
   font-family: var(--font-text);
   text-align: center;
   line-height: 1.2;
@@ -210,9 +211,67 @@ body > main.main > section.landing > .content-one > .text p {
 body > main.main > section.landing > .content-one > .text p.short {
   margin: 10px 0;
   font-size: 1.1rem;
-  font-family: var(--font-read);
+  font-style: italic;
+  font-family: var(--font-read), sans-serif;
   color: var(--gray-color);
 }
+
+main.main > section.landing > .container {
+  display: flex;
+  flex-flow: column;
+  gap: 20px;
+}
+
+main.main > section.landing > .container .columns {
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+
+main.main > section.landing > .container .columns .column {
+  height: 400px;
+  width: 400px;
+  padding: 30px;
+}
+
+main.main > section.landing > .container .columns .column .box {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+}
+
+main.main > section.landing > .container .columns .column img {
+  height: 200px;
+  width: auto;
+  padding: 0;
+  object-fit: contain;
+}
+
+main.main > section.landing > .container .columns .column .box > h3 {
+  margin: 10px 0;
+  padding: 0;
+  font-family: var(--font-main);
+  color: var(--title-color);
+  font-weight: 600;
+  text-align: center;
+  font-size: 1.7rem;
+}
+
+main.main > section.landing > .container .columns .column .box > p {
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-main);
+  text-align: center;
+  color: var(--title-color);
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.3;
+}
+
 
 body > main.main > section.landing > .content-one > .text  .actions {
   margin: 25px 0 0 0;
@@ -254,6 +313,258 @@ body > main.main > section.landing > .content-one > .text  .actions > .explore s
 
 body > main.main > section.landing > .content-one > .text  .actions > .action svg {
   transition: all 0.3s linear;
+}
+
+body > main.main > section.content {
+  /* border: 1px solid red; */
+  padding: 20px 0;
+  width: 85%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+body > main.main > section.content.share {
+  margin: 30px 0;
+  justify-content: center;
+  align-items: center;
+}
+
+body > main.main > section.content h2.title {
+  margin: 30px 0 20px;
+  font-family: var(--font-main);
+  text-align: center;
+  line-height: 1.2;
+  font-size: 2.3rem;
+  font-weight: 700;
+  color: var(--title-color);
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.137);
+}
+
+body > main.main > section.content > div.content {
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+body > main.main > section.content.share > div.content {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+body > main.main > section.content > div.content > .svg {
+  max-height: 400px;
+  min-width: 400px;
+}
+
+body > main.main > section.content > div.content > .svg > img {
+  max-height: 400px;
+  width: auto;
+}
+
+body > main.main > section.content.share > div.content div.info-side {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+body > main.main > section.content > div.content div.info-side {
+  width: 48%;
+  display: flex;
+  flex-flow: column;
+  align-items: start;
+  justify-content: start;
+  gap: 25px;
+}
+
+body > main.main > section.content > div.content div.info-side > h2.title {
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-main);
+  color: var(--title-color);
+  font-weight: 600;
+  text-align: start;
+  font-size: 2rem;
+}
+
+body > main.main > section.content > div.content div.info-side > p {
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-text);
+  color: var(--title-color);
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 1.3;
+}
+
+body > main.main > section.content.share > div.content div.info-side > h2.title {
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-main);
+  color: var(--title-color);
+  text-align: center;
+  font-weight: 600;
+  text-align: start;
+  font-size: 2rem;
+}
+
+body > main.main > section.content.share > div.content div.info-side > p {
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-text);
+  color: var(--title-color);
+  text-align: center;
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 1.3;
+}
+
+body > main.main > section.content > div.content div.info-side > .actions {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: 50px;
+  padding: 10px 0;
+}
+
+body > main.main > section.content > div.content div.info-side > .actions > .action {
+  text-decoration: none;
+  color: var(--text-color);
+  cursor: pointer;
+  font-family: var(--font-main);
+  font-weight: 600;
+  padding: 10px 20px;
+  border-radius: 15px;
+}
+
+body > main.main > section.content > div.content div.info-side > .actions > .learn {
+  border: var(--input-border);
+}
+
+body > main.main > section.content > div.content div.info-side > .actions > .book {
+  color: var(--white-color);
+  background: linear-gradient(0deg, var(--accent-color) 0%, #aaff00 100%);
+}
+
+body > main.main > section.discuss > div.content div.info-side > .actions > .book {
+  color: var(--white-color);
+  background: linear-gradient(0deg, #8581ff 0%, #87d3f6 100%);
+}
+
+body > main.main > section.share > div.content div.info-side > .actions > .book {
+  color: var(--white-color);
+  background: var(--second-linear);
+}
+
+body > main.main > section.share {
+  padding: 20px 0 35px;
+  width: 85%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+}
+
+body > main.main > section.share > div.content > .info > h1.title {
+  margin: 5px 0;
+  font-family: var(--font-main);
+  line-height: 1.2;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: var(--title-color);
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.137);
+}
+
+body > main.main > section.share > div.content {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+body > main.main > section.share > div.content div.info {
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  gap: 10px;
+}
+
+body > main.main > section.share > div.content div.info h3,
+body > main.main > section.share > div.content div.info h2,
+body > main.main > section.share > div.content div.info h1 {
+  margin: 10px 0 5px;
+  padding: 0;
+  font-family: var(--font-main);
+  color: var(--title-color);
+  font-weight: 600;
+  text-align: start;
+  font-size: 1.1rem;
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.137);
+}
+
+body > main.main > section.share > div.content div.info ul,
+body > main.main > section.share > div.content div.info ol {
+  padding: 0 0 0 25px;
+  display: flex;
+  flex-flow: column;
+  gap: 5px;
+}
+
+body > main.main > section.share > div.content div.info > p {
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-text);
+  color: var(--title-color);
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.3;
+}
+
+body > main.main > section.share > div.content div.info strong {
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-text);
+  color: var(--text-color);
+  font-weight: 600;
+  font-size: 1rem;
+  line-height: 1.3;
+}
+
+body > main.main > section.share > div.content div.info > h2.title {
+  margin: 0;
+  padding: 0;
+  font-family: var(--font-main);
+  color: var(--title-color);
+  text-align: center;
+  font-weight: 600;
+  text-align: start;
+  font-size: 2rem;
+}
+
+body > main.main > section.share > div.content >  div.info a {
+  display: flex;
+  margin: 8px 0;
+  text-decoration: none;
+  color: var(--text-color);
+  cursor: pointer;
+  font-family: var(--font-main);
+  background: var(--accent-linear);
+  width: max-content;
+  color: var(--white-color);
+  font-weight: 600;
+  padding: 10px 20px;
+  border-radius: 15px;
 }
 
 
