--- a/res.css
+++ b/res.css
@@ -114,7 +114,6 @@
     margin: 5px 0;
     padding: 20px 10px;
     border-radius: 15px;
-    background: var(--accent-linear);
     width: 100%;
     gap: 5px;
     display: flex;
@@ -126,7 +125,6 @@
     margin: 5px 0;
     padding: 20px 10px;
     border-radius: 15px;
-    background: var(--second-linear);
     width: 100%;
     gap: 5px;
     display: flex;
@@ -158,7 +156,7 @@
     line-height: 1.2;
     font-size: 1.5rem;
     font-weight: 700;
-    color: var(--white-color);
+    color: var(--title-color);
     text-shadow: 0 0 20px rgba(0, 0, 0, 0.137);
   }
   
@@ -166,7 +164,7 @@
     margin: 0;
     padding: 0;
     font-family: var(--font-text);
-    color: var(--white-color);
+    color: var(--title-color);
     text-align: center;
     font-weight: 400;
     font-size: 1rem;
@@ -179,10 +177,6 @@
     flex-wrap: nowrap;
     gap: 50px;
     padding: 10px 0 0;
-  }
-
-  body > main.main > section.content.discuss > div.content div.info-side > .actions {
-    display: none;
   }
 }
 
@@ -202,6 +196,26 @@
     align-items: center;
     justify-content: center;
     align-items: center;
+  }
+
+  body > main.main > section.share > div.content > .info > h1.title {
+    margin: 5px 0;
+    font-family: var(--font-main);
+    line-height: 1.2;
+    font-size: 1.2rem;
+    text-align: center;
+    font-weight: 600;
+    color: var(--title-color);
+    text-shadow: 0 0 20px rgba(0, 0, 0, 0.137);
+  }
+
+  body > main.main > section.share > div.content > .info {
+    align-items: center;
+    justify-content: center;
+  }
+
+  body > main.main > section.share > div.content > .info p {
+    text-align: center;
   }
 
   body > main.main > section.landing > .content-one {
@@ -350,17 +364,9 @@
   }
 
   footer.footer {
-    padding: 10px;
+    padding: 35px 0;
     display: flex;
     flex-flow: column;
   }
 
-}
-
-@media screen and (max-width:500px) {
-  footer.footer {
-    padding: 10px;
-    display: flex;
-    flex-flow: column;
-  }
 }
