refactor: Update CSS styles for responsive layout

--- a/res.css
+++ b/res.css
@@ -178,6 +178,141 @@
     gap: 50px;
     padding: 10px 0 0;
   }
+
+  .about-top {
+    margin: 0;
+    width: 100%;
+    padding: 20px 0 35px;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    color: var(--text-color);
+    text-align: center;
+    gap: 20px;
+  }  
+
+  .about-top  > h1.title {
+    line-height: 1.3;
+    text-shadow: 0 0 20px rgba(0, 0, 0, 0.116);
+    margin: 0;
+    font-size: 1.5rem;
+    font-family: var(--font-main), sans-serif;
+    line-height: 1.3;
+    font-weight: 500;
+  }
+
+  .about-top  > p.text {
+    font-family: var(--font-main), sans-serif;
+    margin: 0;
+    bottom: 40px;
+    font-size: 1rem;
+    line-height: 1.3;
+    font-style: normal;
+    text-align: center;
+  }
+
+  body > main.main > section.explore > div.section {
+    margin: 0;
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  body > main.main > section.explore > div.section > div.info-side {
+    display: flex;
+    flex-flow: column;
+    gap: 10px;
+  }
+  
+  body > main.main > section.explore > div.section > div.info-side > h2.title {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-family: var(font-main);
+    color: var(--title-color);
+    font-weight: 600;
+    font-size: 2rem;
+  }
+  
+  body > main.main > section.explore > div.section > div.info-side > p {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-family: var(font-main);
+    color: var(--title-color);
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+
+  body > main.main > section.explore > div.section > div.image-side {
+    display: none;
+  }
+
+  body > main.main > section.explore > div.section > div.info-side {
+    width: 100%;
+  }
+
+  body > main.main > section.explore > div.section > div.info-side > .actions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    gap: 30px;
+    padding: 15px 0 0 0;
+  }
+
+  body > main.main > section.explore {
+    margin: 0;
+    gap: 10px;
+    display: flex;
+    flex-flow: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  body > main.main > section.explore > div.section.people > div.more {
+    align-self: center;
+    width: 100%;
+    margin: 20px 0;
+    padding: 20px;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  body > main.main > section.explore > div.section.people > div.more >  h2 {
+    margin: 0 0 15px 0;
+    font-family: var(font-main);
+    color: var(--text-color);
+    font-weight: 500;
+    line-height: 1.4;
+    font-size: 1.2rem;
+    text-align: center;
+  }
+  
+  body > main.main > section.explore > div.section.people > div.more >  p {
+    margin: 0;
+    font-family: var(font-main);
+    color: var(--text-color);
+    line-height: 1.4;
+    font-weight: 500;
+  }
+
+  body > main.main > section.explore > div.section.people > div.more >  a.browse {
+    margin: 10px 0 0 0;
+    padding: 10px 20px 12px;
+    background-color: #171442;
+    text-decoration: none;
+    font-family: var(font-main);
+    color: var(--white-color);;
+    font-weight: 500;
+    border-radius: 50px;
+  }
 }
 
 @media screen and (max-width:660px) {
