--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body > .toast > svg {
 /* End Toast Message */
 
 body > main.main {
-  /* border: 1px solid #404040; */
+  /* border: 1px solid var(--text-color); */
   width: 100%;
   display: flex;
   flex-flow: column;
@@ -565,6 +565,225 @@ body > main.main > section.share > div.content >  div.info a {
   font-weight: 600;
   padding: 10px 20px;
   border-radius: 15px;
+}
+
+/* About */
+.about-top {
+  margin: 0;
+  width: 100%;
+  padding: 50px 0;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  color: var(--text-color);
+  text-align: center;
+  gap: 20px;
+}
+
+.about-top > p.head {
+  width: max-content;
+  color: var(--white-color);
+  margin: 0;
+  padding: 5px 12px;
+  background: var(--second-linear);
+  border-radius: 50px;
+}
+
+.about-top  > h1.title {
+  line-height: 1.3;
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.116);
+  margin: 0;
+  font-size: 2.1rem;
+  font-family: var(--font-main), sans-serif;
+  line-height: 1.3;
+  font-weight: 500;
+}
+
+.about-top  > p.text {
+  font-family: var(--font-main), sans-serif;
+  margin: 0;
+  bottom: 40px;
+  font-size: 1.15rem;
+  line-height: 1.5;
+  font-style: normal;
+  text-align: center;
+}
+
+body > main.main > section.explore {
+  margin: 30px 0;
+  gap: 50px;
+  display: flex;
+  flex-flow: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+body > main.main > section.explore > div.section {
+  margin: 0;
+  display: flex;
+  flex-flow: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+body > main.main > section.explore > div.section.vision {
+  width: 100%;
+  margin: 30px 0;
+}
+
+body > main.main > section.explore > div.section > div.image-side,
+body > main.main > section.explore > div.section > div.info-side {
+  width: 50%;
+}
+
+body > main.main > section.explore > div.section.vision > div.info-side {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+body > main.main > section.explore > div.section > div.info-side {
+  display: flex;
+  flex-flow: column;
+  gap: 25px;
+}
+
+body > main.main > section.explore > div.section > div.info-side > h2.title {
+  margin: 0;
+  padding: 0;
+  font-family: var(font-main);
+  color: var(--title-color);
+  font-weight: 500;
+  font-size: 2.5rem;
+}
+
+body > main.main > section.explore > div.section > div.info-side > p {
+  margin: 0;
+  padding: 0;
+  font-family: var(font-main);
+  color: var(--title-color);
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+body > main.main > section.explore > div.section.vision > div.info-side > p {
+  text-align: center;
+}
+
+body > main.main > section.explore > div.section > div.info-side > .actions {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: 30px;
+  padding: 10px 0 0 0;
+}
+
+body > main.main > section.explore > div.section > div.info-side > .actions > .action {
+  text-decoration: none;
+  color: var(--text-color);
+  cursor: pointer;
+  font-family: var(font-main);
+  font-weight: 600;
+  padding: 15px 20px;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+body > main.main > section.explore > div.section > div.info-side > .actions > .learn {
+  border: var(--input-border)
+}
+
+body > main.main > section.explore > div.section > div.info-side > .actions > .book {
+  color: var(--white-color);;
+  background:  rgb(223, 121, 26);
+  background: linear-gradient(0deg, rgb(223, 121, 26) 0%, rgb(240, 156, 78) 100%);
+  background-color: rgb(247, 145, 162);
+}
+
+
+body > main.main > section.explore > div.section > div.image-side {
+  background:  #fac720;
+  margin: 50px 0 0 0;
+  position: relative;
+  width: 400px;
+  height: 400px;
+  border-radius: 100%;
+  overflow: hidden;
+}
+
+body > main.main > section.explore > div.section > div.image-side img {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+body > main.main > section.explore > div.section.people {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+body > main.main > section.explore > div.section.people > div.more {
+  align-self: center;
+  width: 70%;
+  margin: 20px 0;
+  padding: 20px;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 25px;
+}
+
+body > main.main > section.explore > div.section.people > div.more >  span.looking {
+  display: flex;
+  padding: 5px 12px;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  text-decoration: none;
+  color: #808080;
+  border-radius: 50px;
+}
+
+body > main.main > section.explore > div.section.people > div.more >  h2 {
+  margin: 0 0 15px 0;
+  font-family: var(font-main);
+  color: var(--text-color);
+  font-weight: 500;
+  line-height: 1.4;
+  font-size: 1.7rem;
+  text-align: center;
+}
+
+body > main.main > section.explore > div.section.people > div.more >  p {
+  margin: 0;
+  font-family: var(font-main);
+  color: var(--text-color);
+  line-height: 1.4;
+  font-weight: 500;
+}
+
+body > main.main > section.explore > div.section.people > div.more >  a.browse {
+  margin: 15px 0 0 0;
+  padding: 10px 20px;
+  background-color: #171442;
+  text-decoration: none;
+  font-family: var(font-main);
+  color: var(--white-color);;
+  font-weight: 500;
+  border-radius: 50px;
 }
 
 
